make static code analyzer happy